syntax = "proto3";

package api.verifyCode;

option go_package = "driver/api/verifyCode;verifyCode";
option java_multiple_files = true;
option java_package = "api.verifyCode";

service VerifyCode {
  rpc CreateVerifyCode (CreateVerifyCodeRequest) returns (CreateVerifyCodeReply);
  rpc UpdateVerifyCode (UpdateVerifyCodeRequest) returns (UpdateVerifyCodeReply);
  rpc DeleteVerifyCode (DeleteVerifyCodeRequest) returns (DeleteVerifyCodeReply);
  rpc GetVerifyCode (GetVerifyCodeRequest) returns (GetVerifyCodeReply);
  rpc ListVerifyCode (ListVerifyCodeRequest) returns (ListVerifyCodeReply);
}


// 类型常亮
enum TYPE {
  Default = 0;
  DIGIT = 1;
  LETTER = 2;
  MIXED = 3;
}

message CreateVerifyCodeRequest {}
message CreateVerifyCodeReply {}

message UpdateVerifyCodeRequest {}
message UpdateVerifyCodeReply {}

message DeleteVerifyCodeRequest {}
message DeleteVerifyCodeReply {}

// 定义 GetVerifyCodeRequest 消息
message GetVerifyCodeRequest {
  //    验证码长度
  uint32 length = 1;
  // 验证码类型
  TYPE type = 2;
}

// 定义 GetVerifyCodeReply 消息
message GetVerifyCodeReply {
  string code = 1;
}

message ListVerifyCodeRequest {}
message ListVerifyCodeReply {}